--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,12 +8,13 @@
   background-color: #3d4449;
   border-radius: 3px;
   color: #f2f2f2;
-  width: 900px;
+  width: 985px;
   margin: 0 auto;
-  font-size: 12px;
+  font-size: 10px;
+  overflow-x: scroll;
 }
 
-.datatable-header {
+.datatable-tools {
   border-bottom: solid 1px #f2f2f2;
   padding: 12px;
   display: -webkit-box;
@@ -24,11 +25,11 @@
           align-items: baseline;
 }
 
-.datatable-header .search {
+.datatable-tools .search {
   width: 30%;
 }
 
-.datatable-header .search input {
+.datatable-tools .search input {
   width: 100%;
   display: block;
   background-color: #545e65;
@@ -39,11 +40,11 @@
   color: #f2f2f2;
 }
 
-.datatable-header .tools {
+.datatable-tools .tools {
   width: 70%;
 }
 
-.datatable-header .tools ul {
+.datatable-tools .tools ul {
   margin: 0;
   padding: 0;
   display: -webkit-inline-box;
@@ -57,7 +58,7 @@
           align-items: baseline;
 }
 
-.datatable-header .tools ul li {
+.datatable-tools .tools ul li {
   display: inline-block;
   margin: 0 3px;
   -webkit-box-align: baseline;
@@ -65,7 +66,7 @@
           align-items: baseline;
 }
 
-.datatable-header .tools ul li button {
+.datatable-tools .tools ul li button {
   background-color: #262a2d;
   color: #f2f2f2;
   border: 0;
@@ -83,27 +84,48 @@
   padding: 5px 12px;
 }
 
-.datatable-header .tools ul li button:hover {
+.datatable-tools .tools ul li button:hover {
   background-color: #3282b8;
 }
 
-.datatable-body {
+.datatable-wrapper {
   width: 100%;
+  overflow-x: scroll;
+}
+
+.datatable-content {
   border-collapse: collapse;
 }
 
-.datatable-body thead {
+.datatable-content thead {
+  width: calc( 200% - 1em);
+  display: table;
+  table-layout: fixed;
   border-bottom: 2px solid #545e65;
   font-size: 18px;
 }
 
-.datatable-body tbody tr td {
-  padding: 1em 2em;
+.datatable-content tbody {
+  display: block;
+  width: 200%;
+  height: 200px;
+  overflow-y: scroll;
+}
+
+.datatable-content tbody tr {
+  display: table;
+  width: 100%;
+  height: 10px;
+  table-layout: fixed;
+}
+
+.datatable-content tbody tr td {
+  padding: .5em;
   font-size: 16px;
   text-align: center;
 }
 
-.datatable-body tbody tr:hover {
+.datatable-content tbody tr:hover {
   background-color: #3282b8;
   cursor: pointer;
 }
