--- a/main.scss
+++ b/main.scss
@@ -77,17 +77,16 @@ $dtOffline: #d3d3d3;
     }
   }
 
-
-  &-wrapper{
+  &-wrapper {
     width: 100%;
-    //display: block;
     overflow-x: scroll;
   }
 
   &-content {
     border-collapse: collapse;
-    thead{
-      width: calc( 200% - 1em );
+
+    thead {
+      width: calc(200% - 1em);
       display: table;
       table-layout: fixed;
       border-bottom: 2px solid lighten($color: $secondary, $amount: 10%);
@@ -96,20 +95,31 @@ $dtOffline: #d3d3d3;
 
     tbody {
       display: block;
-      width:  200%;
+      width: 200%;
       height: 200px;
-      overflow-y: scroll;
+      overflow-y: auto;
 
-      tr{
+      tr {
         display: table;
         width: 100%;
         height: 10px;
         table-layout: fixed;
-        
-        td{
-          padding: .5em;
+
+        td {
+          // Prevent text overflow
+          max-width: 75px;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
+
+          padding: 0.5em;
           font-size: 16px;
           text-align: center;
+          
+          abbr[title]{
+            border-bottom: none;
+            text-decoration: none;
+          }
         }
 
         &:hover {
@@ -159,4 +169,9 @@ $dtOffline: #d3d3d3;
       }
     }
   }
+}
+
+abbr[title],
+acronym[title] {
+  border-bottom: none;
 }
